--- a/Css/Cadatro.css
+++ b/Css/Cadatro.css
@@ -1,3 +1,7 @@
+html {
+    heigh: 100%;
+}
+
 /* Estilos globais para o corpo da página */
 body {
     margin: 0;
@@ -8,6 +12,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    heigh: 100%;
 }
 
 /* Estilos para o cabeçalho */
